kubernetes/main/apps/kube-system/cilium/gateway/gateway-external.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "external.${SECRET_DOMAIN}"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "${SVC_GATEWAY_EXT_ADDR}"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-tls"
    - name: tls
      protocol: TLS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
    - name: ssh
      protocol: TCP
      port: 22
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-tls"

#---
#apiVersion: gateway.networking.k8s.io/v1alpha2
#kind: TCPRoute
#metadata:
#  name: ssh
#spec:
#  parentRefs:
#  - name: cilium
#    sectionName: ssh
#  rules:
#  - backendRefs:
#    - name: openssh
#      port: 22
