kubernetes/main/apps/kube-system/cilium/gateway/gateway-internal.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname gateway-int.${SECRET_DOMAIN}
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "${SVC_GATEWAY_INT_ADDR}"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            namespace: network
            name: "${SECRET_DOMAIN/./-}-tls"
    #- name: tls
    #  protocol: TLS
    #  port: 443
    #  hostname: "*.${SECRET_DOMAIN}"
    #  allowedRoutes:
    #    namespaces:
    #      from: All
    #  tls:
    #    mode: Passthrough
    #- name: ssh
    #  protocol: TCP
    #  port: 22
    #  allowedRoutes:
    #    kinds:
    #      - kind: TCPRoute
#---
#apiVersion: gateway.networking.k8s.io/v1alpha2
#kind: TCPRoute
#metadata:
#  name: ssh
#spec:
#  parentRefs:
#  - name: cilium
#    sectionName: ssh
#  rules:
#  - backendRefs:
#    - name: openssh
#      port: 22

---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
